--- a/Parkit.html
+++ b/Parkit.html
@@ -1,41 +1,175 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2580
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\pard\tx566\tx1133\tx1700\tx2267\tx2834\tx3401\tx3968\tx4535\tx5102\tx5669\tx6236\tx6803\pardirnatural\partightenfactor0
+<html>
 
-\f0\fs24 \cf0 <Form id="parkIt">\
-  <div id="BG">\
-    <img id="logo" src="https://cdn-icons-png.flaticon.com/512/355/355980.png">\
-\
-    <div id="Menu">\
-      <label class="hello">Destination</label><br>\
-      <select name="dropdown" id="locations">\
-        <option value="Goerzwerk">Goerzwerk</option>\
-        <option value="Supermarket">Supermarket</option>\
-        <option value="School">School</option>\
-        <option value="Doctor">Doctor</option>\
-        <option value="Mall">Mall</option>\
-      </select>\
-    </div>\
-\
-    <div id="Green">\
-      <div id="Stuff">\
-        <label class="hello">Radius (m)</label>\
-        <input type="number" id="radius">\
-        <label clas="helllo">Parking Options:</label><br>\
-        Automatic\
-        <input type="checkbox" id="op1"><br>\
-        Disabled\
-        <input type="checkbox" id="op2"><br>\
-        Garage\
-        <input type="checkbox" id="op3"><br>\
-        Side of the road\
-        <input type="checkbox" id="op4"><br>\
-        Women\
-        <input type="checkbox" id="op5"><br><br>\
-        <button id="searchbtn">Search</buttton>\
-      </div>\
-    </div>\
-</Form>}
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+
+  <style>
+body {
+background-color: lightblue;
+  margin: auto;
+  font-size: 20px;
+}
+img {
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  margin-bottom: 10px;
+}
+label {
+  text-align: left;
+}
+.hello {
+font-family: Comic Sans MS;
+background: greenyellow;
+height:200px;
+width: 50px;
+}
+#cool {
+  text-align: center;
+margin-top: 5px;
+margin-left: 5px;
+padding-top: 10px;
+padding-left: 10px;
+padding-bottom: 10px;
+height:50px;
+width: 350px;
+  margin: 0 auto;
+background: red;
+  font-size: 20px;
+}
+#second {
+margin-top: 50px;
+margin-left: 5px;
+padding-top: 15px;
+padding-left: 10px;
+height:35px;
+width: 350px;
+  margin: 0 auto;
+background: yellowgreen;
+}
+#options {
+margin-top: 50px;
+padding-top: 15px;
+padding-left: 10px;
+  height:200px;
+  width: 350px;
+  margin: 0 auto;
+  background: yellowgreen;
+}
+input[type=checkbox] {
+    transform: scale(1.5);
+}</style>
+
+
+</head>
+
+<body>
+
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Google_Maps_Logo_2020.svg/2275px-Google_Maps_Logo_2020.svg.png" width=80>
+
+  <form method="GET">
+
+    <div id="cool">
+
+      <label>Destination:</label><br>
+
+      <select name="locations" id="loc_names">
+
+        <option value="Goerzwerk">Goerzwerk</option>
+
+        <option value="Hauptbahnhof">Berlin Hauptbahnhof</option>
+
+        <option value="Potsdamer">Potsdamer Platz</option>
+
+        <option value="School">School</option>
+
+      </select>
+
+    </div>
+
+
+
+    <div id="second">
+
+      <label style="margin-left:90px;"> Radius (m):</label>
+
+      <input type="number" id="chicken" style="width: 50px;">
+
+    </div>
+
+   
+
+    <div id='options'>
+
+      <div style="margin-left:90px;">
+
+      <label >Parking options:</label><br>
+
+      Automatic <input type="checkbox" id="option1" value="Yes"><br>
+
+      Disabled parking <input type="checkbox" id="option2" value="Yes"><br>
+
+      Parking garage <input type="checkbox" id="option3" value="Yes"><br>
+
+      Side of the road <input type="checkbox" id="option4" value="Yes"><br>
+
+      Women parking <input type="checkbox" id="option5" value="Yes"><br><br>
+
+      <button id="search">Search</button><br>
+
+      </div>
+
+    </div>
+
+  </form>
+
+  <script type="text/javascript">
+function myFunction() {
+  var starlink = document.getElementById("chicken");
+  alert(starlink.value);
+}
+document.getElementById("search").onclick = myFunction;
+
+
+function checkbox() {
+  var starlink = document.getElementById("option1");
+  alert('automatic');
+}
+document.getElementById('option1').addEventListener('change', checkbox);
+
+function dropbox() {
+  var star = document.getElementById("loc_names");
+  var strUser = star.value;
+  alert(strUser)
+}
+document.getElementById('loc_names').addEventListener('change', dropbox);
+
+function checkbox2() {
+  var starlink = document.getElementById("option2");
+  alert('disabled');
+}
+document.getElementById('option2').addEventListener('change', checkbox2);
+
+function checkbox3() {
+  var starlink = document.getElementById("option3");
+  alert('garage');
+}
+document.getElementById('option3').addEventListener('change', checkbox3);
+
+function checkbox4() {
+  var starlink = document.getElementById("option4");
+  alert('roadside');
+}
+document.getElementById('option4').addEventListener('change', checkbox4);
+
+function checkbox5() {
+  var starlink = document.getElementById("option5");
+  alert('women');
+}
+document.getElementById('option5').addEventListener('change', checkbox5);
+  </script>
+
+</body>
+
+<html>
